# ERF-Chat

./: .env  FileReadTool.py  README.md  SBERTActivityRecommendationTool.py  TFIDFActivityRecommendationTool.py  crew.py  data.joblib  embeddings.joblib  get_matrix.py  main.ipynb  main.py  prompt examples.txt  pyproject.toml  requirements.txt  sample form.docx  sbert.joblib  train_sbert.py
.ipynb_checkpoints/: main-checkpoint.ipynb
src/erf_chat/: crew.py  main.py
synthetic-documents/: exhibition1.docx  exhibition10.docx  exhibition11.docx  exhibition12.docx  exhibition13.docx  exhibition2.docx  exhibition3.docx  exhibition4.docx  exhibition5.docx  exhibition6.docx  exhibition7.docx  exhibition8.docx  exhibition9.docx  personal bg.txt  topic-map.txt  topics.txt  workshop1.docx  workshop10.docx  workshop11.docx  workshop12.docx  workshop13.docx  workshop14.docx  workshop15.docx  workshop16.docx  workshop2.docx  workshop3.docx  workshop4.docx  workshop5.docx  workshop6.docx  workshop7.docx  workshop8.docx  workshop9.docx
